--- a/style.css
+++ b/style.css
@@ -3,3 +3,37 @@ body {
   height: 100%;
   margin: 0;
 }
+h1 {
+  text-align: center;
+}
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+.links {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: lightcoral;
+}
+nav {
+  text-align: center;
+}
+figcaption {
+  text-align: center;
+  font-size: smaller;
+}
+P.mainParagraphs {
+margin-left: auto;
+margin-right: auto;
+width: 800px;
+text-align: center;
+line-height: 20px;
+}
+div {
+  float: left;
+  background-color: lightcoral;
+  text-align: center;
+  width: 25%;
+}
